--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.6.0",
-    "@react-navigation/native": "^6.1.17",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~51.0.14",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "node.js": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
